# blackbox-model-tracing

./: .gitignore  README.md  batch_size_ablations.py  bs_tests.ipynb  debug_shuffle_train.py  distill.py  kgram.ipynb  kgram.py  kgram_correlate.py  pile_pplx.py  pyproject.toml  run.ipynb  shuffle_train.ipynb  synthetic.ipynb  synthetic.py  train.ipynb  train.py  train_toy_models.py
kgram_train/: utils.py
ngram/: generate.py  index_texts_pythia.py  tests.py
notebooks/: bs_tests.ipynb  kgram.ipynb  observation-dolmino.ipynb  observation-tinystories-null.ipynb  observation-tinystories.ipynb  query-distillation.ipynb  reference_model_experiments.ipynb
scripts/: pile_sequence_pplx.py  pile_sequence_pplx_plots.ipynb  pplx_evaluate.py
scripts/observation/: dolmino.py  dolmino_sampling_sweep.py  dolmino_sampling_sweep_temp.py  launch_dolmino.py  launch_dolmino_sampling_sweep.py  launch_tinystories.py  launch_tinystories_null.py  launch_tinystories_null_bigsample.py  launch_tinystories_scale.py  launch_tinystories_temp.py  minimal.py  partition.py  pythia_part.py  tinystories.py  tinystories_null.py  train_null.py  ts_lm_obs.py  ts_lm_obs_part.py  ts_lm_obs_shuffle.py
scripts/observation/misc/: ts_lm_obs.py
scripts/query/: launch_tinystories_distillation.py  pythia.py  run_query_test.py  tinystories_basic.py  tinystories_distillation.py
src/: compute_pplx.py
tracing/: index.py  launch.py  llm.py  test.py  utils.py
tracing/observation/: statistics.py
tracing/query/: metrics.py
tracing/sample/: metrics.py  statistics.py
